update start script to display build logs. update game logic so that user must meet more interactive conditions to win the game. modify the game to ensure the map matches the flow of the game and interconnectedness of the rooms. update read me.